# FB

./: .env.example  .gitignore  README.md  autonomous_job.py  check_hf.py  job_state.json  longcat_script.py  modal_avatar.py  playbook.md  pyproject.toml  run_pipeline.bat  setup_schedule.ps1  test.vtt  test_ass.py  test_blur.py  test_broll_gen.py  test_distortion.py  test_distortion_fixed.py  test_fallback.py  test_fish.py  test_integration.py  test_pip.py  token.json  topic_history.json  upload_history.json  verify_fix.py
.github/workflows/: avatar_pipeline.yml  daily.yml  daily_pipeline.yml  reply_comments.yml
caption_test/: final_test.py  run_test.py  test2.py  test3.py  test_chatterbox.py  test_parallax.py
logs/: autonomous_job_log.md
src/avatar_pipeline/: __init__.py  assembler.py  fish_speech_client.py  run.py
src/football_pipeline/: __init__.py  cli.py  config.py  creatomate_edit.py  http.py  models.py  moviepy_edit.py  pipeline.py  shotstack_edit.py  signal_processing.py  youtube_upload.py
src/football_pipeline/clients/: __init__.py  analytics_client.py  chatterbox_tts_client.py  comment_bot.py  creatomate_client.py  edge_tts_client.py  elevenlabs_client.py  gemini_client.py  giphy_client.py  gtts_client.py  image_search_client.py  pexels_client.py  rss_client.py  shotstack_client.py  tenor_search_client.py  trends_client.py  twitter_client.py  youtube_discovery.py  youtube_util.py
src/football_trend_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_creatomate_edit.py  test_shotstack_edit.py  test_signal_processing.py
