[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "football-trend-pipeline"
version = "0.1.0"
description = "AI-assisted football trend video pipeline using YouTube, Gemini, yt-dlp, MoviePy, and YouTube upload."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
    "chatterbox-tts",
    "torch",
    "torchaudio",
    "moviepy<2.0.0",
    "Pillow<10.0.0",
    "yt-dlp>=2024.0.0",
    "requests>=2.31.0",
    "rembg[cpu]>=2.0.0",
    "whisper-timestamped",
    "pytrends>=4.9.2",
    "pandas>=2.0.0",
]

[project.scripts]
football-pipeline = "football_pipeline.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

